# firefighting_drone

./: CMakeLists.txt  README.md  package.xml  setup.py
launch/: gazebo_sim.launch.py  spawn_city.launch.py
models/drone/: model.config  model.sdf
models/map/: model.config  model.sdf
scripts/: keyboard_controller.py
src/: drone_camera_viewer.py
worlds/: city_world.world
